# Open_GL

./: CMakeLists.txt  Visualizer.cpp  Visualizer.h  glad.c  main.cpp
libraries/glad/: glad.h
my_project_build/: CMakeCache.txt  LearnOpenGL  Makefile  cmake_install.cmake
